@@ -947,41 +947,11 @@ class Controller
 		$token    = $this->container->platform->getToken(false);
 		$hasToken = $this->input->get($token, false, 'none') == 1;
 
-		if (!$hasToken)
-		{
-			$hasToken = $this->input->get('_token', null, 'none') == $token;
-		}
-
-		if ($hasToken)
-		{
-			$view = $this->input->getCmd('view');
-			$task = $this->input->getCmd('task');
-			\JLog::add(
-				"FOF: You are using a legacy session token in (view, task)=($view, $task). Support for legacy tokens will go away. Use form tokens instead.",
-				\JLog::WARNING,
-				'deprecated'
-			);
-		}
-
 		// Check for a form token
 		if (!$hasToken)
 		{
 			$token    = $this->container->platform->getToken(true);
 			$hasToken = $this->input->get($token, false, 'none') == 1;
-
-			if (!$hasToken)
-			{
-				$view = $this->input->getCmd('view');
-				$task = $this->input->getCmd('task');
-				\JLog::add(
-					"FOF: You are using the insecure _token form variable in (view, task)=($view, $task). Support for it will go away. Submit a variable with the token as the name and a value of 1 instead.",
-					\JLog::WARNING,
-					'deprecated'
-				);
-
-
-				$hasToken = $this->input->get('_token', null, 'none') == $token;
-			}
 		}
 
 		if (!$hasToken)
