@@ -16,6 +16,7 @@ Backwards compatibility notes
     * FOF40\Utils\StringHelper::toSlug()
     * FOF40\Utils\StringHelper::toASCII()
     * FOF40\View\View::loadHelper()
+    * Support for legacy tokens (passed _token=SESSION_OR_FORM_TOKEN instead of SESSION_OR_FORM_TOKEN=1)
 * The AkeebaStrapper renderer has been removed. Use the Joomla3 renderer isntead
 
 *** LEGEND ***
